Se agregan pruebas unitarias

--- a/Library Browser Travel/BrowserTravel.Library.Test/BrowserTravel.Library.Test.csproj
+++ b/Library Browser Travel/BrowserTravel.Library.Test/BrowserTravel.Library.Test.csproj
@@ -7,10 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.17" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="NUnit" Version="3.13.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BrowserTravel.Library.Infraestructure\BrowserTravel.Library.Infraestructure.csproj" />
+    <ProjectReference Include="..\BrowserTravel.Library.Repository\BrowserTravel.Library.Repository.csproj" />
+    <ProjectReference Include="..\BrowserTravel.Library.Services\BrowserTravel.Library.Services.csproj" />
   </ItemGroup>
 
 </Project>
